fix single page main art width on mobile.

--- a/src/pages/SingleStory/SingleStory.css
+++ b/src/pages/SingleStory/SingleStory.css
@@ -130,3 +130,10 @@
   height: auto;
   width: 50%;
 }
+
+@media (max-width: 450px) {
+  .story-img{
+    height: auto;
+    width: 100%;
+  }
+}
